--- a/src/index.css
+++ b/src/index.css
@@ -174,13 +174,11 @@ body {
   position: absolute;
   top: 0px;
   left: 0px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   background-color: white;
   z-index: 200;
 }
 
 .loader img {
-  height: 100px;
+  height: 120px;
 }
