--- a/src/index.css
+++ b/src/index.css
@@ -166,7 +166,7 @@ body {
   background-size: cover;
   background-position: center;
   z-index: 100;
-  opacity: 80%;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .loader {
